# ssurf

./: .gitignore  LICENSE  README.md  pyproject.toml
ssurf/: __init__.py  _constants.py  _errors.py  _types.py  chunk.py  chunk_decoders.py  chunk_models.py  detect.py  normalize.py  parse.py  read.py  settings.py  signatures.py  stream.py  utils.py
