[tool.poetry]
name = "ssurf"
version = "0.1.0"
description = "WAVE reading, encoding, and decoding."
authors = ["janusmiracle"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
mypy = "^1.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
